[package]
name = "loomer"
version = "0.1.0"
edition = "2021"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
xcap = "0.0.14"
enigo = "0.2.1"
wgpu = "23.0.0"
log = "0.4.22"
pollster = "0.4.0"
bytemuck = { version = "1.19", features = ["derive"] }
anyhow = "1.0.92"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]
